# pi-client

./: .gitignore  AGENTS.md  README.md  architecture.html  build.bat  check-cargo.bat  check-cargo.ps1  cursor-modes-research-report.md  eslint.config.mjs  instrumentation.ts  next.config.ts  package-lock.json  package.json  test-apply-role.mjs  test-build-prompt.mjs  test-decompose.mjs  test-skills.mjs  test-system-prompt.mjs  tsconfig.json
.agents/: roles.json
.deerhux/: roles.json
app/: globals.css  layout.tsx
components/: AppShell.tsx  BranchNavigator.tsx  ChangedFilesList.tsx  ChatFileExplorerButton.tsx  ChatInput.tsx  ChatMinimap.tsx  ChatWindow.tsx  ChatWorkspace.tsx  CollaborationRunCard.tsx  ExtensionsConfig.tsx  FileExplorer.tsx  FilePreviewPanel.tsx  FilePreviewWindow.tsx  FileViewer.tsx  LogPanel.tsx  McpConfig.tsx  MemoryConfig.tsx  MessageView.tsx  ModelsConfig.tsx  RemoteConnectionsBlock.tsx  RoleConfig.tsx  SchedulerPanel.tsx  SchedulerRunsBlock.tsx  SessionSidebar.tsx  SkillsConfig.tsx  SubagentRunCard.tsx  SystemPromptConfig.tsx  TabBar.tsx  ToolPanel.tsx  WeChatConfig.tsx
docs/: agent-call-architecture-issues.md  agent-loop-engine-design.md  architecture-diagram.html  llm-rate-limit-handling-plan.md  message-send-reply-lifecycle.md  parallel-agent-proposal.md  (+6 more)
hooks/: useAgentStatus.ts  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon copy.icns  icon.icns
src-tauri/placeholder-dist/: index.html
src-tauri/resources/: deerhux-server.js  pi-agent-server.js
src-tauri/src/: lib.rs  main.rs
(+170 files in other folders)
