[package]
name = "pi-agent"
version = "0.6.12"
description = "Desktop app for the pi coding agent web UI"
authors = ["pi-agent contributors"]
edition = "2021"

[lib]
name = "pi_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
