[package]
name = "deerhux"
version = "0.6.12"
description = "Desktop app for the DeerHux web UI"
authors = ["DeerHux contributors"]
edition = "2021"

[lib]
name = "deerhux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
